...
        <ImageView
                android:id="@+id/busImgView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/company_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:src="@drawable/ddot_bus" />

...
                android:id="@+id/company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/DdotGreen"
                android:gravity="center"
                android:padding="10dp"
                android:text="DDOT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/busImgView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
