<resources>
    <string name="app_name">ETA Detroit Kotlin</string>
    <string name="routes_label">Routes</string>

    <string name="search_icon">search</string>

    <string name="open">Navigation View Open</string>
    <string name="close">Navigation View Close</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="google_android_map_api_key">AIzaSyBGKeGG-Pzp4wizZrIkjkfegLlE1Phr-eI</string> <!-- AIzaSyCHY3IJ8TmbTs5p2AyEJ03XLjcevQX2YFo,AIzaSyAEgBEnhwFkfALuHOPFNthLPfdCy3JSEBM, -->
    <string name="google_directions_api_key">AIzaSyDkECaMhruOlHgmP4-QN6AU-IzQcydpK4M</string>

    <string name="weekday">weekday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>

    <string name="WEEKDAY">WEEKDAY</string>
    <string name="SATURDAY">SATURDAY</string>
    <string name="SUNDAY">SUNDAY</string>

    <string name="dayFormat">MM/dd/yyyy</string>
    <string name="timeFormat">HH:mm</string>
    <string name="dateAndTimeFormat">MM/dd/yyyy HH:mm</string>
    <string name="location_permission_rationale">ETA Detroit Requesting to use Location Services</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="planMyRoute">Plan My Route</string>
    <string name="myRoute">My Route</string>
    <string name="ddotRoutesTitle">Ddot Bus Route</string>
    <string name="smartRoutesTitle">Smart Bus Route</string>
    <string name="reflexRoutesTitle">Fast Bus Route</string>
    <string name="peopleMoverTitle">Detroit People Mover</string>

    <string name="navHomeString">Home</string>
    <string name="navPlannerString">Plan My Route</string>
    <string name="navDdot">DDOT Bus</string>
    <string name="navSmart">Smart Bus</string>
    <string name="navReflex">Fast Bus</string>
    <string name="navPeopleMover">Detroit People Mover</string>
    <string name="navQline">Qline</string>
    <string name="navRouteMap">Route Map</string>

    <string name="RouteMapTitle">Routes</string>

    <string name="planner">planner</string>
    <string name="routes">routes</string>
    <string name="routeDetails">routeDetails</string>
    <string name="home">home</string>
    <string name="map">map</string>
    <string name="peopleMover">peopleMover</string>
    <string name="qline">qline</string>
    <string name="allRoutes">allRoutes</string>
    <string name="mapView">mapView</string>

    <string name="stopTimeString">MORE STOP TIMES</string>
    <string name="stopTimeMinutes">Minutes</string>
    <string name="nextBus">Next Bus Arriving</string>
    <string name="nextBusMessage">Bus Arriving At</string>

    <string name="loadingRoutes">Loading Routes…</string>

    <string name="noRoute">This Route is Not Currently Being Offered</string>
    <string name="route_number">Route Number</string>
    <string name="route_name">Route Name</string>
    <string name="arrow_desc">Arrow pointing right</string>
    <string name="route_item_subtitle">ROUTE %s</string>
    <string name="transportation_desc">An image of your chosen transportation.</string>
    <string name="direction_fab_desc">Loads in the stops for the alternative direction the bus route travels in</string>

    <string name="no_stop_times_found">No Stop Times Found</string>
    <string name="next_stop">Next Stop: %d Minutes</string>
    <string name="unable_to_generate_route">Sorry, we could not generate any transit routes for the information given</string>
    <string name="loading_route">Loading %s…</string>
</resources>